--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,19 @@
-{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    {% render_bundle 'main' 'css' %}
+
+     {% include 'css.html' %}
+
+    <title>{% block title %} Document {% endblock %}</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <div id="app"></div>
-    {% render_bundle 'main' 'js' %}
+    {% include 'navbar.html' %}
+    
+    {% block content %}{% endblock %}
+
+    {% include 'js.html' %}
 </body>
 </html>
